Remove cache busting query strings

--- a/assets/stylesheets/materialdesignicons.css.erb
+++ b/assets/stylesheets/materialdesignicons.css.erb
@@ -8,8 +8,8 @@
 
 @font-face {
   font-family: "Material Design Icons";
-  src: url("<%= font_path("materialdesignicons-webfont.eot?v=#{MaterialDesignIcons::MDI_VERSION}") %>");
-  src: url("<%= font_path("materialdesignicons-webfont.eot?#iefix&v=#{MaterialDesignIcons::MDI_VERSION}") %>") format("embedded-opentype"), url("<%= font_path("materialdesignicons-webfont.woff2?v=#{MaterialDesignIcons::MDI_VERSION}") %>") format("woff2"), url("<%= font_path("materialdesignicons-webfont.woff?v=#{MaterialDesignIcons::MDI_VERSION}") %>") format("woff"), url("<%= font_path("materialdesignicons-webfont.ttf?v=#{MaterialDesignIcons::MDI_VERSION}") %>") format("truetype"), url("<%= font_path("materialdesignicons-webfont.svg?v=#{MaterialDesignIcons::MDI_VERSION}") %>#materialdesigniconsregular") format("svg");
+  src: url("<%= font_path('materialdesignicons-webfont.eot') %>");
+  src: url("<%= font_path('materialdesignicons-webfont.eot?#iefix') %>") format("embedded-opentype"), url("<%= font_path('materialdesignicons-webfont.woff2') %>") format("woff2"), url("<%= font_path('materialdesignicons-webfont.woff') %>") format("woff"), url("<%= font_path('materialdesignicons-webfont.ttf') %>") format("truetype"), url("<%= font_path('materialdesignicons-webfont.svg') %>#materialdesigniconsregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
