Upgrade Material Design Icons assets to 1.7.12

--- a/assets/stylesheets/materialdesignicons.css.erb
+++ b/assets/stylesheets/materialdesignicons.css.erb
@@ -14,10 +14,10 @@
   font-style: normal;
 }
 
-.mdi {
+.mdi:before,
+.mdi-set {
   display: inline-block;
   font: normal normal normal 24px/1 "Material Design Icons";
-  font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -186,6 +186,10 @@
 
 .mdi-alarm-plus:before {
   content: "\F024";
+}
+
+.mdi-alarm-snooze:before {
+  content: "\F68D";
 }
 
 .mdi-album:before {
@@ -520,6 +524,10 @@
   content: "\F06C";
 }
 
+.mdi-baby-buggy:before {
+  content: "\F68E";
+}
+
 .mdi-backburger:before {
   content: "\F06D";
 }
@@ -530,6 +538,10 @@
 
 .mdi-backup-restore:before {
   content: "\F06F";
+}
+
+.mdi-bandcamp:before {
+  content: "\F674";
 }
 
 .mdi-bank:before {
@@ -672,6 +684,10 @@
   content: "\F092";
 }
 
+.mdi-beaker:before {
+  content: "\F68F";
+}
+
 .mdi-beats:before {
   content: "\F097";
 }
@@ -808,6 +824,10 @@
   content: "\F0B8";
 }
 
+.mdi-bomb:before {
+  content: "\F690";
+}
+
 .mdi-bone:before {
   content: "\F0B9";
 }
@@ -926,6 +946,10 @@
 
 .mdi-border-vertical:before {
   content: "\F0D2";
+}
+
+.mdi-bow-tie:before {
+  content: "\F677";
 }
 
 .mdi-bowl:before {
@@ -1084,6 +1108,14 @@
   content: "\F0F3";
 }
 
+.mdi-calendar-question:before {
+  content: "\F691";
+}
+
+.mdi-calendar-range:before {
+  content: "\F678";
+}
+
 .mdi-calendar-remove:before {
   content: "\F0F4";
 }
@@ -1134,6 +1166,10 @@
 
 .mdi-camera:before {
   content: "\F100";
+}
+
+.mdi-camera-burst:before {
+  content: "\F692";
 }
 
 .mdi-camera-enhance:before {
@@ -1676,6 +1712,10 @@
   content: "\F174";
 }
 
+.mdi-code-tags-check:before {
+  content: "\F693";
+}
+
 .mdi-codepen:before {
   content: "\F175";
 }
@@ -1690,6 +1730,10 @@
 
 .mdi-coin:before {
   content: "\F178";
+}
+
+.mdi-coins:before {
+  content: "\F694";
 }
 
 .mdi-collage:before {
@@ -1840,6 +1884,10 @@
   content: "\F19A";
 }
 
+.mdi-creation:before {
+  content: "\F1C9";
+}
+
 .mdi-credit-card:before {
   content: "\F19B";
 }
@@ -1850,6 +1898,10 @@
 
 .mdi-credit-card-off:before {
   content: "\F5E4";
+}
+
+.mdi-credit-card-plus:before {
+  content: "\F675";
 }
 
 .mdi-credit-card-scan:before {
@@ -1870,6 +1922,10 @@
 
 .mdi-crop-portrait:before {
   content: "\F1A1";
+}
+
+.mdi-crop-rotate:before {
+  content: "\F695";
 }
 
 .mdi-crop-square:before {
@@ -1948,6 +2004,10 @@
   content: "\F1B3";
 }
 
+.mdi-currency-usd-off:before {
+  content: "\F679";
+}
+
 .mdi-cursor-default:before {
   content: "\F1B4";
 }
@@ -2004,6 +2064,10 @@
   content: "\F1C0";
 }
 
+.mdi-delete-circle:before {
+  content: "\F682";
+}
+
 .mdi-delete-forever:before {
   content: "\F5E8";
 }
@@ -2034,6 +2098,10 @@
 
 .mdi-details:before {
   content: "\F1C6";
+}
+
+.mdi-developer-board:before {
+  content: "\F696";
 }
 
 .mdi-deviantart:before {
@@ -2128,8 +2196,20 @@
   content: "\F1D5";
 }
 
+.mdi-dna:before {
+  content: "\F683";
+}
+
 .mdi-dns:before {
   content: "\F1D6";
+}
+
+.mdi-do-not-disturb:before {
+  content: "\F697";
+}
+
+.mdi-do-not-disturb-off:before {
+  content: "\F698";
 }
 
 .mdi-domain:before {
@@ -2142,6 +2222,10 @@
 
 .mdi-dots-vertical:before {
   content: "\F1D9";
+}
+
+.mdi-douban:before {
+  content: "\F699";
 }
 
 .mdi-download:before {
@@ -2256,8 +2340,16 @@
   content: "\F1F3";
 }
 
+.mdi-emoticon-dead:before {
+  content: "\F69A";
+}
+
 .mdi-emoticon-devil:before {
   content: "\F1F4";
+}
+
+.mdi-emoticon-excited:before {
+  content: "\F69B";
 }
 
 .mdi-emoticon-happy:before {
@@ -2604,6 +2696,10 @@
   content: "\F243";
 }
 
+.mdi-flash-red-eye:before {
+  content: "\F67A";
+}
+
 .mdi-flashlight:before {
   content: "\F244";
 }
@@ -2704,6 +2800,10 @@
   content: "\F258";
 }
 
+.mdi-folder-star:before {
+  content: "\F69C";
+}
+
 .mdi-folder-upload:before {
   content: "\F259";
 }
@@ -2770,6 +2870,10 @@
 
 .mdi-format-color-fill:before {
   content: "\F266";
+}
+
+.mdi-format-color-text:before {
+  content: "\F69D";
 }
 
 .mdi-format-float-center:before {
@@ -2886,6 +2990,10 @@
 
 .mdi-format-quote:before {
   content: "\F27E";
+}
+
+.mdi-format-section:before {
+  content: "\F69E";
 }
 
 .mdi-format-size:before {
@@ -3092,6 +3200,10 @@
   content: "\F2AC";
 }
 
+.mdi-gondola:before {
+  content: "\F685";
+}
+
 .mdi-google:before {
   content: "\F2AD";
 }
@@ -3176,6 +3288,10 @@
   content: "\F2C0";
 }
 
+.mdi-gradient:before {
+  content: "\F69F";
+}
+
 .mdi-grease-pencil:before {
   content: "\F648";
 }
@@ -3206,6 +3322,10 @@
 
 .mdi-hackernews:before {
   content: "\F624";
+}
+
+.mdi-hamburger:before {
+  content: "\F684";
 }
 
 .mdi-hand-pointing-right:before {
@@ -3314,6 +3434,10 @@
 
 .mdi-home-modern:before {
   content: "\F2DD";
+}
+
+.mdi-home-outline:before {
+  content: "\F6A0";
 }
 
 .mdi-home-variant:before {
@@ -3457,7 +3581,15 @@
 }
 
 .mdi-inbox:before {
+  content: "\F686";
+}
+
+.mdi-inbox-arrow-down:before {
   content: "\F2FB";
+}
+
+.mdi-inbox-arrow-up:before {
+  content: "\F3D1";
 }
 
 .mdi-incognito:before {
@@ -3490,6 +3622,10 @@
 
 .mdi-invert-colors:before {
   content: "\F301";
+}
+
+.mdi-itunes:before {
+  content: "\F676";
 }
 
 .mdi-jeepney:before {
@@ -3932,6 +4068,14 @@
   content: "\F362";
 }
 
+.mdi-message-bulleted:before {
+  content: "\F6A1";
+}
+
+.mdi-message-bulleted-off:before {
+  content: "\F6A2";
+}
+
 .mdi-message-draw:before {
   content: "\F363";
 }
@@ -4212,6 +4356,10 @@
   content: "\F39F";
 }
 
+.mdi-nuke:before {
+  content: "\F6A3";
+}
+
 .mdi-numeric:before {
   content: "\F3A0";
 }
@@ -4352,6 +4500,10 @@
   content: "\F3C2";
 }
 
+.mdi-oar:before {
+  content: "\F67B";
+}
+
 .mdi-octagon:before {
   content: "\F3C3";
 }
@@ -4410,10 +4562,6 @@
 
 .mdi-ornament-variant:before {
   content: "\F3D0";
-}
-
-.mdi-outbox:before {
-  content: "\F3D1";
 }
 
 .mdi-owl:before {
@@ -4628,6 +4776,10 @@
   content: "\F400";
 }
 
+.mdi-piano:before {
+  content: "\F67C";
+}
+
 .mdi-pig:before {
   content: "\F401";
 }
@@ -4792,6 +4944,14 @@
   content: "\F425";
 }
 
+.mdi-power-plug:before {
+  content: "\F6A4";
+}
+
+.mdi-power-plug-off:before {
+  content: "\F6A5";
+}
+
 .mdi-power-settings:before {
   content: "\F426";
 }
@@ -4838,6 +4998,10 @@
 
 .mdi-projector-screen:before {
   content: "\F42F";
+}
+
+.mdi-publish:before {
+  content: "\F6A6";
 }
 
 .mdi-pulse:before {
@@ -4996,6 +5160,14 @@
   content: "\F455";
 }
 
+.mdi-reorder-horizontal:before {
+  content: "\F687";
+}
+
+.mdi-reorder-vertical:before {
+  content: "\F688";
+}
+
 .mdi-repeat:before {
   content: "\F456";
 }
@@ -5032,6 +5204,10 @@
   content: "\F45E";
 }
 
+.mdi-restore:before {
+  content: "\F6A7";
+}
+
 .mdi-rewind:before {
   content: "\F45F";
 }
@@ -5048,12 +5224,20 @@
   content: "\F462";
 }
 
+.mdi-robot:before {
+  content: "\F6A8";
+}
+
 .mdi-rocket:before {
   content: "\F463";
 }
 
 .mdi-rotate-3d:before {
   content: "\F464";
+}
+
+.mdi-rotate-90:before {
+  content: "\F6A9";
 }
 
 .mdi-rotate-left:before {
@@ -5132,6 +5316,10 @@
   content: "\F473";
 }
 
+.mdi-scanner:before {
+  content: "\F6AA";
+}
+
 .mdi-school:before {
   content: "\F474";
 }
@@ -5194,6 +5382,10 @@
 
 .mdi-security:before {
   content: "\F483";
+}
+
+.mdi-security-home:before {
+  content: "\F689";
 }
 
 .mdi-security-network:before {
@@ -5412,6 +5604,10 @@
   content: "\F664";
 }
 
+.mdi-skull:before {
+  content: "\F68B";
+}
+
 .mdi-skype:before {
   content: "\F4AF";
 }
@@ -5454,6 +5650,10 @@
 
 .mdi-sofa:before {
   content: "\F4B9";
+}
+
+.mdi-solid:before {
+  content: "\F68C";
 }
 
 .mdi-sort:before {
@@ -5641,6 +5841,10 @@
 }
 
 .mdi-subway:before {
+  content: "\F6AB";
+}
+
+.mdi-subway-variant:before {
   content: "\F4DF";
 }
 
@@ -5754,6 +5958,10 @@
 
 .mdi-tag-faces:before {
   content: "\F4FA";
+}
+
+.mdi-tag-heart:before {
+  content: "\F68A";
 }
 
 .mdi-tag-multiple:before {
@@ -5916,6 +6124,10 @@
   content: "\F51F";
 }
 
+.mdi-timer-sand-empty:before {
+  content: "\F6AC";
+}
+
 .mdi-timetable:before {
   content: "\F520";
 }
@@ -5960,6 +6172,14 @@
   content: "\F52A";
 }
 
+.mdi-tower-beach:before {
+  content: "\F680";
+}
+
+.mdi-tower-fire:before {
+  content: "\F681";
+}
+
 .mdi-traffic-light:before {
   content: "\F52B";
 }
@@ -5982,6 +6202,10 @@
 
 .mdi-transfer:before {
   content: "\F530";
+}
+
+.mdi-transit-transfer:before {
+  content: "\F6AD";
 }
 
 .mdi-translate:before {
@@ -6124,8 +6348,16 @@
   content: "\F550";
 }
 
+.mdi-unity:before {
+  content: "\F6AE";
+}
+
 .mdi-untappd:before {
   content: "\F551";
+}
+
+.mdi-update:before {
+  content: "\F6AF";
 }
 
 .mdi-upload:before {
@@ -6380,6 +6612,10 @@
   content: "\F58B";
 }
 
+.mdi-watch-vibrate:before {
+  content: "\F6B0";
+}
+
 .mdi-water:before {
   content: "\F58C";
 }
@@ -6416,6 +6652,10 @@
   content: "\F593";
 }
 
+.mdi-weather-lightning-rainy:before {
+  content: "\F67D";
+}
+
 .mdi-weather-night:before {
   content: "\F594";
 }
@@ -6434,6 +6674,10 @@
 
 .mdi-weather-snowy:before {
   content: "\F598";
+}
+
+.mdi-weather-snowy-rainy:before {
+  content: "\F67E";
 }
 
 .mdi-weather-sunny:before {
@@ -6616,6 +6860,10 @@
   content: "\F5C2";
 }
 
+.mdi-yin-yang:before {
+  content: "\F67F";
+}
+
 .mdi-youtube-play:before {
   content: "\F5C3";
 }
@@ -6624,19 +6872,28 @@
   content: "\F5C4";
 }
 
-.mdi-18px {
+.mdi-blank:before {
+  content: "\F68C";
+  visibility: hidden;
+}
+
+.mdi-set.mdi-18px,
+.mdi.mdi-18px:before {
   font-size: 18px;
 }
 
-.mdi-24px {
+.mdi-set.mdi-24px,
+.mdi.mdi-24px:before {
   font-size: 24px;
 }
 
-.mdi-36px {
+.mdi-set.mdi-36px,
+.mdi.mdi-36px:before {
   font-size: 36px;
 }
 
-.mdi-48px {
+.mdi-set.mdi-48px,
+.mdi.mdi-48px:before {
   font-size: 48px;
 }
 
